--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
 <body>
   <div class = "snap" >
-    <section>
-        <img src="svg/Title.png" ></img>
+    <section style="background-image: linear-gradient(180deg, #ffebff, #efc6f5); font-size: 5em;">
+        <div> A Survivour Story of Hyperemesis Gravidarum (HG)</div>
+        <!-- <img src="svg/Title.png" ></img> -->
     </section>
-    <section>
-        <img src="svg/E1.png"></img>
+    <section style="background: #ffebff">
+      <p class="intro1">HI!</p>
+      <svg >
+        <image href="svg/E1-img.png" />
+      </svg> 
+      <p class="intro2">MY NAME IS EMILY LIBERATORE</p>
     </section>
     <section>
         <img src="svg/E2.png"></img>
@@ -37,16 +42,19 @@
         <img src="svg/definition.png"></img>
     </section>
     <section>
-        <img src="svg/explainHG-path1.svg"></img>
+        <img src="svg/explainHG1-path.svg"></img>
+    </section>
+    <section class="image_text">
+        <img src="svg/explainHG1-path.svg"></img>
     </section>
     <section>
-        <img src="svg/explainHG-path2.svg"></img>
+        <img src="svg/explainHG2-path.svg"></img>
     </section>
     <section>
         <img src="svg/Intro.png"></img>
     </section>
     <section>
-      <img src="svg/data.png"></img>
+        <img src="svg/data.png"></img>
     </section>
    
     <section class="section-dataviz">
@@ -119,7 +127,7 @@
                 <tr>
                     <td><img src="svg/Headache-tool.png" width="200" height="200"></td>
                     <td>
-                        <div class = "hedache">Headache</div>
+                        <div class = "headache" style="color:black">Headache</div>
                         <div class = "quote"> “I was in so much pain” </div>
                     </td>
                 </tr>
@@ -174,9 +182,43 @@
       <img src="svg/end1.png" ></img>
     </section>
     <section>
-      <img src="svg/end2.png"></img>
+      <div class="acktxt">
+        Don't hesitate to seek help, like Emily did ! <br> 
+        Ask your doctor for Antacids or Anti-nausea Medication <br>
+        that will alleviate your symptoms. 
+      </div>
     </section>
-  </div>    
+
+    <section>
+      <div class="acktxt">
+        <div class="acktxt1">
+        For more Information and Stories about HG experiences please visit:
+        </div>
+        <div class="acktxt2">
+          <a class="link" href="https://www.hyperemesis.org/"> www.hyperemesis.org </a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="acktxt">
+        <div class="acktxt1">
+          The Norwegian Mother, Father and Child Cohort Study is supported by the Norwegian
+          Ministry of Health and Care Services and the Ministry of Education and Research. We are
+          grateful to all the participating families in Norway who take part in this on-going cohort
+          study.
+        </div>
+        <div class="acktxt2">
+          <a class="link" href="https://www.fhi.no/op/studier/moba//"> MoBa </a>
+        </div>
+      </div>
+    </section>
+
+    
+  </div>
+  
+ 
+    
   
 </body>
 
@@ -184,11 +226,11 @@
 
 
 <!-- <script src="NVpos1.js"></script> -->
-<script src="NVpos1.js"></script>
-<script src="NVposneg1.js"></script>
-<script src="NVneg1.js"></script>
-<script src="noNVpos2.js"></script>
-<script src="noNVposneg2.js"></script>
+<script src="js/NVpos1.js"></script>
+<script src="js/NVposneg1.js"></script>
+<script src="js/NVneg1.js"></script>
+<script src="js/noNVpos2.js"></script>
+<script src="js/noNVposneg2.js"></script>
 
 </html>
 
