--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <body>
   <div class = "snap" >
     <section>
-        <img src="svg/Title-share.png" ></img>
-    </section>
-    <section>
-        <img src="svg/E1.png"></img>
+        <img src="svg/Title.png" ></img>
     </section>
     <section>
         <img src="svg/E2.png"></img>
@@ -34,13 +31,16 @@
         <img src="svg/E6.png"></img>
     </section>
     <section>
+        <img src="svg/E7.png"></img>
+    </section>
+    <section>
         <img src="svg/definition.png"></img>
     </section>
     <section>
-        <img src="svg/explainHG1-path.svg"></img>
+        <img src="svg/explainHG1.png"></img>
     </section>
     <section>
-        <img src="svg/explainHG2-path.svg"></img>
+        <img src="svg/explainHG2.png"></img>
     </section>
     <section>
         <img src="svg/Intro.png"></img>
@@ -119,8 +119,8 @@
                 <tr>
                     <td><img src="svg/Headache-tool.png" width="200" height="200"></td>
                     <td>
-                        <div class = "hedache">Headache</div>
-                        <div class = "quote"> “I was in so much pain” </div>
+                        <div class = "hedache">Hodepin</div>
+                        <div class = "quote"> “Jeg hadde det så vondt” </div>
                     </td>
                 </tr>
               </table> 
@@ -134,10 +134,10 @@
                 <tr>
                     <td><img src="svg/Fatigue-tool.png" width="200" height="200"></td>
                     <td>
-                        <div class = "fatigue">Unusual Fatigue/Drowsiness</div>
-                        <div class = "quote"> “(...) needing to constantly visit 
-                          the hospital for being so weak that I would faint, 
-                          not be able to eat, or fall over from dizzines, (…)” </div>
+                        <div class = "fatigue">Uvanlig tretthet/døsighet</div>
+                        <div class = "quote"> “(...) måtte stadig på sykehus fordi jeg var så svak 
+                          sykehuset fordi jeg var så svak at jeg besvimte, 
+                          ikke var i stand til å spise, eller falt om av svimmelhet, (...)” </div>
                     </td>
               </table> 
            </span>
@@ -174,44 +174,19 @@
       <img src="svg/end1.png" ></img>
     </section>
     <section>
-      <div class="acktxt">
-        Don't hesitate to seek help, like Emily did ! <br> 
-        Ask your doctor for Antacids or Anti-nausea Medication <br>
-        that will alleviate your symptoms. 
-      </div>
+      <img src="svg/info.png" ></img>
     </section>
 
     <section>
-      <div class="acktxt">
-        <div class="acktxt1">
-        For more Information and Stories about HG experiences please visit:
-        </div>
-        <div class="acktxt2">
-          <a class="link" href="https://www.hyperemesis.org/"> www.hyperemesis.org </a>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="acktxt">
-        <div class="acktxt1">
-          The Norwegian Mother, Father and Child Cohort Study is supported by the Norwegian
-          Ministry of Health and Care Services and the Ministry of Education and Research. We are
-          grateful to all the participating families in Norway who take part in this on-going cohort
-          study.
+      <div>
+          Den norske mor, far og barn-undersøkelsen (MoBa) er støttet av Helse- og Omsorgsdepartementet og Kunnskapsdepartementet. Vi er takknemlige mot alle familiene i Norge som deltar i denne pågående kohortstudien.
         </div>
         <div class="acktxt2">
           <a class="link" href="https://www.fhi.no/op/studier/moba//"> MoBa </a>
         </div>
       </div>
     </section>
-
-    
   </div>
-  
- 
-    
-  
 </body>
 
 </html>
