--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="griditem"></div>
         <div class="griditem"> 
-          <img src="svg/icons-pregnancy-stages.svg" width="600" height="190" style="margin-top: -220px; margin-right:30px"></img>
+          <img src="svg/icons-pregnancy-stages.png" width="600" height="190" style="margin-top: -220px; margin-right:30px"></img>
         </div>
         
         <div class="griditem"></div>
@@ -88,8 +88,8 @@
                 <tr>
                     <td><img src="svg/Depress-tool.png" width="200" height="200"></td>
                     <td>
-                        <div class = "depress">Depression</div>
-                        <div class = "quote"> “I constantly told the doctors at the hospital that I couldn't bear it anymore.” </div>
+                        <div class = "depress">Depresjon</div>
+                        <div class = "quote"> “Jeg sa hele tiden til legene på sykehuset at jeg ikke orket mer.” </div>
                     </td>
                 </tr>
               </table> 
@@ -103,9 +103,8 @@
                 <tr>
                     <td><img src="svg/Sleep-tool.png" width="200" height="200"></td>
                     <td>
-                        <div class = "sleep">Sleeping Problems</div>
-                        <div class = "quote"> “My vomiting was so severe that I barely 
-                          slept at night and constantly had my head in the toilet or a bucket.” </div>
+                        <div class = "sleep">Søvnproblemer</div>
+                        <div class = "quote"> “Oppkastene mine var så kraftige at jeg knapt sov om natten sov om natten og hele tiden hadde hodet i toalettet eller i en bøtte..” </div>
                     </td>
                 </tr>
               </table> 
@@ -119,7 +118,7 @@
                 <tr>
                     <td><img src="svg/Headache-tool.png" width="200" height="200"></td>
                     <td>
-                        <div class = "hedache">Hodepin</div>
+                        <div class = "hedache">Hodepine</div>
                         <div class = "quote"> “Jeg hadde det så vondt” </div>
                     </td>
                 </tr>
@@ -174,16 +173,16 @@
       <img src="svg/end1.png" ></img>
     </section>
     <section>
-      <img src="svg/info.png" ></img>
+      <img src="svg/info-path.png" ></img>
     </section>
 
     <section>
       <div>
           Den norske mor, far og barn-undersøkelsen (MoBa) er støttet av Helse- og Omsorgsdepartementet og Kunnskapsdepartementet. Vi er takknemlige mot alle familiene i Norge som deltar i denne pågående kohortstudien.
-        </div>
-        <div class="acktxt2">
-          <a class="link" href="https://www.fhi.no/op/studier/moba//"> MoBa </a>
-        </div>
+      </div>
+      <div>
+          <a href="https://www.fhi.no/op/studier/moba//"> MoBa </a>
+      </div>
       </div>
     </section>
   </div>
@@ -199,7 +198,7 @@
 <script src="js/noNVpos2.js"></script>
 <script src="js/noNVposneg2.js"></script>
 
-</html>
+
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
