--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="griditem"></div>
         <div class="griditem"> 
-          <img src="svg/icons-pregnancy-stages.png" width="600" height="190" style="margin-top: -220px; margin-right:30px"></img>
+          <img src="svg/icons-pregnancy-stages.svg" width="600" height="190" style="margin-top: -220px; margin-right:30px"></img>
         </div>
         
         <div class="griditem"></div>
