--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </section>
 
     <section>
-      <div>
+      <div style="font-family: Segoe UI; font-size: 40pt; text-alignment: center">
           Den norske mor, far og barn-undersøkelsen (MoBa) er støttet av Helse- og Omsorgsdepartementet og Kunnskapsdepartementet. Vi er takknemlige mot alle familiene i Norge som deltar i denne pågående kohortstudien.
       </div>
       <div>
