--- a/index.html
+++ b/index.html
@@ -177,12 +177,10 @@
     </section>
 
     <section>
-      <div style="font-family: Segoe UI; font-size: 40pt; text-alignment: center">
-          Den norske mor, far og barn-undersøkelsen (MoBa) er støttet av Helse- og Omsorgsdepartementet og Kunnskapsdepartementet. Vi er takknemlige mot alle familiene i Norge som deltar i denne pågående kohortstudien.
-      </div>
-      <div>
+      <div style="font-family: Segoe UI; font-size: 20pt; text-alignment: center">
+          Den norske mor, far og barn-undersøkelsen (MoBa) er støttet av Helse- og Omsorgsdepartementet og Kunnskapsdepartementet. <br>
+          Vi er takknemlige mot alle familiene i Norge som deltar i denne pågående kohortstudien. <br>
           <a href="https://www.fhi.no/op/studier/moba//"> MoBa </a>
-      </div>
       </div>
     </section>
   </div>
@@ -197,8 +195,6 @@
 <script src="js/NVneg1.js"></script>
 <script src="js/noNVpos2.js"></script>
 <script src="js/noNVposneg2.js"></script>
-
-
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
