--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="griditem"></div>
         <div class="griditem"> 
-            <svg id="svgypos1" width="750" height="500" style="margin-top:-5%;">
+            <svg id="nvpos" width="750" height="500" style="margin-top:-5%;">
               <defs>
                 <linearGradient id="gradient01">
                   <stop offset="00%" stop-color="#0022ff85" />
@@ -76,7 +76,7 @@
         
         <div class="griditem"></div>
         <div class="griditem"> 
-            <svg id="svgyposneg1" width="750" height="500" style="margin-top: -80px;"></svg>
+            <svg id="nvneg" width="750" height="500" style="margin-top: -80px;"></svg>
         </div>
 
         <div class="griditem"></div>
@@ -155,14 +155,14 @@
         </div>
         <div class="griditem"></div>
         <div class="griditem"> 
-            <svg id="svgypos2" width="750" height="500" style="margin-top:-5%;"></svg></div>
+            <svg id="nonvpos" width="750" height="500" style="margin-top:-5%;"></svg></div>
         <div class="griditem"></div>
         <div class="griditem"> 
           <img src="svg/icons-pregnancy-stages.svg" width="600" height="190" style="margin-top: -220px; margin-right:30px"></img>
         </div>
         <div class="griditem"></div>
         <div class="griditem"> 
-            <svg id="svgyposneg2" width="750" height="500" style="margin-top: -80px">  
+            <svg id="nonvneg" width="750" height="500" style="margin-top: -80px">  
             </svg>
         </div>
         <div class="griditem" style="margin-bottom: -80px"></div>
@@ -190,11 +190,10 @@
 
 
 <!-- <script src="NVpos1.js"></script> -->
-<script src="js/NVpos1.js"></script>
-<script src="js/NVposneg1.js"></script>
-<script src="js/NVneg1.js"></script>
-<script src="js/noNVpos2.js"></script>
-<script src="js/noNVposneg2.js"></script>
+<script src="js/NVpos.js"></script>
+<script src="js/NVneg.js"></script>
+<script src="js/noNVpos.js"></script>
+<script src="js/noNVneg.js"></script>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
